--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "echarts": "^4.1.0",
     "eventsource-polyfill": "^0.9.6",
     "nuxt": "^1.0.0",
     "vant": "^1.0.7",
